Add initial implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-project(bootstrap-cpp-kata CXX)
+project(tire-pressure-monitoring-cpp-kata CXX)
 enable_testing()
 
 set(CMAKE_CXX_STANDARD 17)
@@ -15,10 +15,10 @@ foreach(test ${tests})
     get_filename_component(name ${test} NAME_WE)
     add_executable(${name} ${test})
     add_test(${name} ${name})
-    target_link_libraries(${name} PRIVATE GTest::gmock GTest::gmock_main)
+    target_link_libraries(${name} PRIVATE GTest::gmock_main)
 endforeach()
 
-add_custom_target(  
+add_custom_target(
     copy-compile-commands ALL
     ${CMAKE_COMMAND} -E copy_if_different
     ${CMAKE_BINARY_DIR}/compile_commands.json
